# snake-ai-sfml

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  changes.md  simple-game.sln  snake-ai-sfml.sln  todo.md
simple-game/: Food.cpp  Food.h  Game.cpp  Game.h  Map.cpp  Map.h  MapParams.h  Point.h  RamdomPoint.cpp  RamdomPoint.h  Snake.cpp  Snake.h  Utilities.cpp  Utilities.h  main.cpp  simple-game.vcxproj  tests.cpp  tests.h
snake-ai-sfml/: Game.cpp  Game.h  Layer.cpp  Layer.h  Matrix.cpp  Matrix.h  NeuralNet.cpp  NeuralNet.h  Point.h  Population.cpp  Population.h  Snake.cpp  Snake.h  SnakeAI.cpp  SnakeAI.h  Utilities.cpp  Utilities.h  snake-ai-sfml.filters  snake-ai-sfml.vcxproj
snake-ai-sfml/ai_agent/include/: Evolution.h  EvolutionParams.h  Layer.h  Matrix.h  NeuralNet.h  Population.h  Selection.h  SnakeAI.h
snake-ai-sfml/ai_agent/src/: Evolution.cpp  Layer.cpp  Matrix.cpp  NeuralNet.cpp  Population.cpp  Selection.cpp  SnakeAI.cpp
snake-ai-sfml/game_core/include/: Food.h  Point.h  RamdomPoint.h  Snake.h  Utilities.h
snake-ai-sfml/game_core/src/: Food.cpp  Game.cpp  Map.cpp  Point.cpp  Snake.cpp  Utilities.cpp  main.cpp
snake-ai-sfml/include/: Food.h  Game.h  GameWindow.h  Map.h  MapParams.h  Snake.h
snake-ai-sfml/src/: Food.cpp  Game.cpp  GameWindow.cpp  Map.cpp  Point.cpp  Snake.cpp  Utilities.cpp  main.cpp
snake-ai-sfml/tests/: tests.h
tests/: TestEvolution.h  TestLayer.h  TestMatrix.h  TestNeuralNet.h  TestPopulation.h  TestSnakeAI.h  main.cpp  tests.vcxproj
